Kenzie fixed the browser title for createDiscussion. Kenzie fixed browser title and all css for createEmail especially the spacing.

--- a/css/base.css
+++ b/css/base.css
@@ -323,6 +323,7 @@ input[type=submit], button, .button, a.button-signup {
     transition: background-color .3s;
     cursor: pointer;
     text-align: center;
+    margin: 3px;
 }
 
 input[type=submit]:hover, button:hover, .button:hover, a.button-signup:hover {
